[package]
name = "async-codec-util"
version = "0.1.0"
authors = ["AljoschaMeyer <mail@aljoscha-meyer.de>"]
description = "Utilities for working with the async-codec traits."
repository = "https://github.com/AljoschaMeyer/async-codec-util-rs"
readme = "README.md"
license = "AGPL-3.0"

[dependencies]
async-codec = "0.1.0"
